--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,3 +14,4 @@ add_executable(MooBuzz MooBuzz.cpp
 add_executable(BerryPicking BerryPicking.cpp
         BerryPicking.cpp)
 add_executable(LeftOver LeftOver.cpp)
+add_executable(MooCereal MooCereal.cpp)
