--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,3 +15,4 @@ add_executable(BerryPicking BerryPicking.cpp
         BerryPicking.cpp)
 add_executable(LeftOver LeftOver.cpp)
 add_executable(MooCereal MooCereal.cpp)
+add_executable(TheGreatRevegetation TheGreatRevegetation.cpp)
