--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,3 +18,4 @@ add_executable(MooCereal MooCereal.cpp)
 add_executable(TheGreatRevegetation TheGreatRevegetation.cpp)
 add_executable(GrassPlanting GrassPlanting.cpp)
 add_executable(LemonadeLine LemonadeLine.cpp)
+add_executable(RestStops RestStops.cpp)
